--- a/Paper/build.gradle
+++ b/Paper/build.gradle
@@ -2,11 +2,9 @@ plugins {
     id 'java'
 }
 
-group = 'me.partlysunny.sunnui'
 version = '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
     maven {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
@@ -18,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':API')
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
 }
 
